Fix richeditor popup z-index inside modal

--- a/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
+++ b/modules/backend/formwidgets/richeditor/assets/less/richeditor.less
@@ -101,6 +101,10 @@
     z-index: 9997 !important;
 }
 
+.fr-popup {
+    z-index: 9995 !important;
+}
+
 //
 // Stretch
 //
